--- a/inventory/templates/inventory/home.html
+++ b/inventory/templates/inventory/home.html
@@ -78,11 +78,17 @@
                 {% endif %}
 
                 <!-- COEUR FAVORI -->
-                <a href="{% url 'login' %}?next={{ request.path }}"
-                   class="favorite-heart"
-                   title="Ajouter aux favoris (connexion requise)">
-                    <i class="bi bi-heart-fill"></i>
-                </a>
+                {% if user.is_authenticated %}
+   <a href="{% url 'toggle_favorite' car.id %}" class="favorite-heart">
+    <i class="bi {% if car.id in user_favorites %}bi-heart-fill text-danger{% else %}bi-heart{% endif %}"></i>
+</a>
+{% else %}
+    <a href="{% url 'login' %}?next={{ request.path }}"
+       class="favorite-heart"
+       title="Ajouter aux favoris (connexion requise)">
+        <i class="bi bi-heart"></i>
+    </a>
+{% endif %}
             </div>
 
             <div class="card-body">
